fixed add icon alignment

--- a/apps/todos/src/app/task-handler/task-handler.component.scss
+++ b/apps/todos/src/app/task-handler/task-handler.component.scss
@@ -62,7 +62,7 @@ mat-card {
 
 .add-icon {
   padding-left: calc(50% - 50px);
-  padding-top: calc(50% - 76px);
+  padding-top: calc(60% - 76px);
 }
 
 .add-icon > mat-icon {
